   * Made quick replay skip messages
   * linger mode overlay is also drawn over fog and shroud (bug #10811)
   * Units are deselected before they move.
   * The next move can be prepared before the current attack/move 
     animation finishes (bug #7132).
   * If a move is interrupted, footsteps are drawn again.
   * Tuned some details of the mouse handling.
 * miscellaneous and bug fixes:
   * Fixed boost test compile with 1.34.1
   * Make wesnoth work properly again if the datadir contains ../
   * Fixed some type of addon not being uninstallable (bug #10788)
   * some filtering was added to the [animate_unit] action to actually make it
     usefull
   * converted NO_MAP_DATA to new map format
   * fixed unchecked vector access
   * fixed weapon_specials filter_opponent to work in attack selection (bug #8333)
   * added a more graceful handling of maps without a header (bug #10787)
   * make sure the python campaign client list shows a space between the 
     headers if the size of the column is smaller than the header (eg uploads)

Version 1.3.14:
 * campaigns:
   * The Hammer of Thursagan:
     * 'Invaders' if there weren't enough free tiles to spawn all indigs the 
       game would enter an infinite loop (bug #10621)
   * Two Brothers:
     * updated the music playlists in all scenarios to include the new music
   * Under the Burning Suns:
     * Completely new scenario 3
     * Few bugfixes to scenario 6
 * graphics:
   * overlays are properly drawn at the top row (eg forrest) (bug #10238)
   * mountains no longer have a hill as base
   * when a leader dies the villages, which are no longer are owned, are
     properly redrawn (bug #9136)
   * sometimes the first hitpoints left percentage and the unscatched had a 
     difference of 0.1%, this has been fixed (bug #9122)
 * language and i18n:
   * updated translations: Chinese, Danish, Dutch, Finnish, French, German,
     Italian, Lithuanian, Slovak, Spanish