@@ -20,6 +20,8 @@ Version 1.3.14+svn:
      animation finishes (bug #7132).
    * If a move is interrupted, footsteps are drawn again.
    * Tuned some details of the mouse handling.
+ * WML engine:
+   * Fixed order of sighted and moveto events (bug: #9560)
  * miscellaneous and bug fixes:
    * Fixed boost test compile with 1.34.1
    * Make wesnoth work properly again if the datadir contains ../
